www/style.css
:root {
    --titlebar-height: 6vh;
}

html {
    height: 100vh;
    width: 100vw;
    overflow: hidden;
}

#sidebar {
    width: 10vw;
    z-index: 2;
}

.sidebar-title {
    font-size: large;
}

hr {
    margin-top: 5px;
    margin-bottom: 5px;
}

.title-bar {
    height: var(--titlebar-height);
    z-index: 1;
}

#title-text {
    z-index: 1;
    text-align: center;
    margin-top: 0;
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0);
    overflow: hidden;
}

.ui-layer2 {
    z-index: 1;
}

#indLabel,
#dimLabel {
    position: fixed;
    bottom: 0;
}

#indLabel {
    right: 0;
}

#dimLabel {
    left: 0;
}

#smallImg {
    object-fit: contain;
    width: 100%;
    height: 100%;
    max-height: calc(100vh - var(--titlebar-height));
    position: absolute;
    z-index: -1;
}

#bigImg {
    overflow: auto;
    position: absolute;
    margin: auto;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

#imageModal {
    z-index: 3;
    height: 90vh;
    width: 90vw;
    overflow: auto;
    margin: 5vh 5vw;
    padding: 0
}

#container {
    padding: 0.01em 0;
}

#infoModal>div,
#errorModal>div {
    padding: 0.5em;
    width: auto;
    text-align: center;
}

.w3-modal>div>p {
    margin: 5px 0;
}

.animDown {
    position: relative;
    animation-name: down;
    animation-duration: 0.5s;
    overflow: hidden;
    top: 100vh;
}

@keyframes down {
    from {
        top: 0;
    }

    to {
        top: 100vh;
    }
}

.animUp {
    position: relative;
    animation-name: up;
    animation-duration: 0.5s;
    overflow: hidden;
    bottom: 100vh;
}

@keyframes up {
    from {
        bottom: 0;
        z-index: -1;
    }

    to {
        bottom: 100vh;
        z-index: -1;
    }
}

#smallImgWrapper {
    display: block;
    height: auto;
    width: auto;
}

.rmButton {
    margin: 0;
    display: inline;
    padding: 4px 8px;
}

#folderBarMountPoint {
    z-index: 1;
    margin: 0;
    width: 100vw;
    overflow-y: hidden;
    overflow-x: auto;
    white-space: nowrap;
    position: absolute;
    display: none;
}

#folderBarMountPoint>button {
    margin: 0 0.25em;
}

#newFldrModal {
    height: 100vh;
}

#newFldrModal>div {
    width: 25%;
    padding: 0.5em;
}

#newFldrModal>div>h3 {
    text-align: center;
}

input {
    display: inline;
    margin: 8px;
    width: 95%;
}

#fldrModalMountPoint {
    display: inline;
}

#settingsModal {
    height: 100vh;
}

#settingsModal>div {
    width: 25%;
    padding: 0.5em;
}

#settingsModal>div>h3 {
    text-align: center;
}

#settingsModalMountPoint {
    display: inline;
}

#indLabel>input {
    width: 4em;
}

